refactor: ♻️ improve documentation
