# apps/server/src/configs/config-set/main-configuration.ts
@@ -23,70 +23,69 @@
  *
  */
 
-import convict                          from 'convict'
+import convict from 'convict'
 import {ApplicationConfigurationSchema} from '../config-set/application-configuration.js'
-import {AuthroizationConfiguration}     from '../config-set/authorization-configuration.js'
-import {ConfigurationContainer}         from '../schema/configuration-container.js'
-import {NodeEnvironment}                from '../values/node-environment.js'
-import {RedisConfiguration}             from './redis-configuration.js'
-
+import {AuthroizationConfiguration} from '../config-set/authorization-configuration.js'
+import {ConfigurationContainer} from '../schema/configuration-container.js'
+import {NodeEnvironment} from '../values/node-environment.js'
+import {RedisConfiguration} from './redis-configuration.js'
 
 
 export const MainConfiguration: convict.Schema<ConfigurationContainer> = {
-	PROTOCOL:            {
-		doc:     'Defines the protocol used by the application. Options are \'http\' or \'https\'. Default is \'http\'.',
-		default: 'http',
-		env:     'PROTOCOL',
-	},
-	HOST:                {
-		doc:     'Defines the host on which the application runs. Default for development is \'localhost\'.',
-		default: 'localhost',
-		env:     'HOST',
-	},
-	PORT:                {
-		doc:     'Defines the port on which the application listens. Default for development is 1337, otherwise it\'s 80.',
-		default: 1337,
-		env:     'PORT',
-		format:  'port',
-	},
-	SERVICE_NAME:        {
-		doc:     'Defines the name of the service.',
-		default: 'neuronek-api',
-		env:     'SERVICE_NAME',
-	},
-	SERVICE_DESCRIPTION: {
-		doc:     'Provides a brief description of the service. Default description is set.',
-		default: 'Neuronek is a service that provides a RESTful API for providing substance information.',
-		env:     'SERVICE_DESCRIPTION',
-	},
-	NODE_ENV:            {
-		doc:     'Sets the application environment. Can be one of \'development\', \'test\', \'production\', or \'staging\'. Default is \'development\'.',
-		default: 'development',
-		env:     'NODE_ENV',
-		format:  Object.values(NodeEnvironment),
-	},
-	TRACING:             {
-		doc:     'Enables or disables OpenTelemetry tracing, which traces requests and responses between services and applications. Default is enabled.',
-		default: true,
-		env:     'TRACING',
-	},
-	SENTRY_DSN:          {
-		doc:     'Defines the Sentry DSN. Default is empty.',
-		default: '',
-		env:     'SENTRY_DSN',
-	},
-	DEBUG:               {
-		doc:     'Enables or disables debug mode. Default is disabled.',
-		default: false,
-		env:     'DEBUG',
-	},
-	APPLICATION:         ApplicationConfigurationSchema,
-	AUTH:                AuthroizationConfiguration,
-	FEATURE:             {
-		ENABLE_TUNNEL: {
-			doc:     'Enables or disables the tunnel feature',
-			default: true,
-		},
-	},
-	redis:               RedisConfiguration,
+    PROTOCOL           : {
+        doc    : 'Defines the protocol used by the application. Options are \'http\' or \'https\'. Default is \'http\'.',
+        default: 'http',
+        env    : 'PROTOCOL',
+    },
+    HOST               : {
+        doc    : 'Defines the host on which the application runs. Default for development is \'localhost\'.',
+        default: 'localhost',
+        env    : 'HOST',
+    },
+    PORT               : {
+        doc    : 'Defines the port on which the application listens. Default for development is 1337, otherwise it\'s 80.',
+        default: 1337,
+        env    : 'PORT',
+        format : 'port',
+    },
+    SERVICE_NAME       : {
+        doc    : 'Defines the name of the service.',
+        default: 'neuronek-api',
+        env    : 'SERVICE_NAME',
+    },
+    SERVICE_DESCRIPTION: {
+        doc    : 'Provides a brief description of the service. Default description is set.',
+        default: 'Neuronek is open, community-driven database of psychoactive substances, their interactions and effects with the goal of providing accurate and relevant information to users. And also to provide tools for tracking and managing personal substance usage.',
+        env    : 'SERVICE_DESCRIPTION',
+    },
+    NODE_ENV           : {
+        doc    : 'Sets the application environment. Can be one of \'development\', \'test\', \'production\', or \'staging\'. Default is \'development\'.',
+        default: 'development',
+        env    : 'NODE_ENV',
+        format : Object.values(NodeEnvironment),
+    },
+    TRACING            : {
+        doc    : 'Enables or disables OpenTelemetry tracing, which traces requests and responses between services and applications. Default is enabled.',
+        default: true,
+        env    : 'TRACING',
+    },
+    SENTRY_DSN         : {
+        doc    : 'Defines the Sentry DSN. Default is empty.',
+        default: '',
+        env    : 'SENTRY_DSN',
+    },
+    DEBUG              : {
+        doc    : 'Enables or disables debug mode. Default is disabled.',
+        default: false,
+        env    : 'DEBUG',
+    },
+    APPLICATION        : ApplicationConfigurationSchema,
+    AUTH               : AuthroizationConfiguration,
+    FEATURE            : {
+        ENABLE_TUNNEL: {
+            doc    : 'Enables or disables the tunnel feature',
+            default: true,
+        },
+    },
+    redis              : RedisConfiguration,
 }
